--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
   background-color:black;
 	list-style: none;
 	margin: 0 auto;
-	padding: 30px 0;
+	padding: 20px 0;
 	text-align: center;
   font-size: 35px;
 }
@@ -66,7 +66,7 @@ body {
 .nav li {
   color:white;
   display:inline;
-  margin:5px 5px 5px 5px;
+  margin:10px 10px 10px 10px;
   text-transform:uppercase;
 }
 
@@ -79,7 +79,7 @@ body {
   float:left;
   height:250px;
   width:200px;
-  margin-right:10px;
+  margin-right:40px;
 }
 
 /* Jumbotron */
@@ -98,10 +98,17 @@ body {
 }
 .jumbotron h1 {
   color:white;
+  margin-bottom: -25px;
+}
+
+.jumbotron h2 {
+  color:white;
+  margin-bottom: -25px;
 }
 
 .jumbotron p {
   color:white;
+  margin-bottom: -10px;
 }
 
 .jumbotron a {
